[tool.poetry]
name = "xcon"
version = "1.6.0"
description = "Dynamic configuration retreiver."
authors = ["Josh Orr <josh@orr.blue>"]

[tool.poetry.dependencies]
python = "^3.8"
#xyn-types = "^1.1.0"
#xyn-utils = "^1.4.0"
#xyn-dateutils = "^1.1.0"
#
#xyn-resource = ">=2.1.2,<4"
#xyn-logging = "^1.1.1"
#xyn-aws = "^1.1.1"
#xyn-settings = "^1.1.0"
xbool = "^1.0.0"
xloop = "^1.0.1"
xsentinels = "^1.2.1"
xinject = "^1.3.0"
xboto = "^1.0.2"
xsettings = "^1.0.0"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
pytest-order = "^1.0.1"
pytest-pycodestyle = "^2.3.1"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.12"
mike = "^1.1.2"


[tool.poetry.dev-dependencies]
ipdb = "^0"
pdoc3 = "*"
black = {version = "*", allow-prereleases = true}
moto = {version = "*", extras = ["dynamodb2", "ssm", "secretsmanager"] }
boto3-stubs = { extras = ["essential"], version = "*" }
mkdocstrings = { extras = ["python"], version = "^0" }
mkdocs-autorefs = "^0"
mkdocs-git-revision-date-plugin = "^0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 99
target_version = ['py38']
skip-string-normalization = 1
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
